# eoap-gen

./: .gitignore  Makefile  README.md  action.yml  ades_guide.md  pyproject.toml
.github/workflows/: action-test.yml  ci.yml  generate-reusable.yml
eoap_gen/: __main__.py  cli.py  config.py  cwl.py  dockerfile.py  template.py  utils.py
eoap_gen/templates/: cwltool.jinja  dockerfile.jinja
tests/: generator_test.py
tests/data/: config.yml  get_urls_reqs.txt
tests/data/ref-out/cli/: workflow-packed.cwl  workflow.cwl
tests/data/ref-out/cli/get_urls/: get_urls.Dockerfile  get_urls.cwl
tests/data/ref-out/cli/make_stac/: make_stac.Dockerfile  make_stac.cwl
tests/data/ref-out/cli/process/: process.cwl
